# Image-Background-Remover

./: README.md  pyproject.toml
backgroundremover/: background_remover.py
